Morse encoder example added

--- a/k_type_thermocouple_temp_convertor/thermocouple_voltage_to_temperature.ipynb
+++ b/k_type_thermocouple_temp_convertor/thermocouple_voltage_to_temperature.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -76,8 +76,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def temperature_from_voltage(voltage = 0.):\n",
@@ -99,8 +101,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def voltage_from_temperature(temperature = 27.):\n",
@@ -122,6 +126,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[   4.3    9.3   14.3   19.3   24.3   29.3   34.3   39.3   44.3   49.3\n",
+      "   54.3   59.3   64.3   69.3   74.3   79.3   84.3   89.3   94.3   99.3\n",
+      "  104.3  109.3  114.3  119.3  124.3]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.17  ,  0.369 ,  0.569 ,  0.77  ,  0.972 ,  1.1743,  1.3783,\n",
+       "        1.5823,  1.7883,  1.9933,  2.2003,  2.4066,  2.6136,  2.8213,\n",
+       "        3.0286,  3.2366,  3.4443,  3.6516,  3.8593,  4.0663,  4.2733,\n",
+       "        4.4793,  4.6853,  4.8903,  5.0953])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temperatures = np.arange(37.3, 160, 5) - 33\n",
+    "print(temperatures)\n",
+    "\n",
+    "voltage_from_temperature(temperatures)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90.09756097560975"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temperature_from_voltage(2.36 + voltage_from_temperature(33))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.325\n",
+      "6.539\n",
+      "5.205\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(voltage_from_temperature(33))\n",
+    "print(voltage_from_temperature(160))\n",
+    "print(voltage_from_temperature(160 - 33))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
@@ -129,30 +209,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[   3.    8.   13.   18.   23.   28.   33.   38.   43.   48.   53.   58.\n",
-      "   63.   68.   73.   78.   83.   88.   93.   98.  103.  108.  113.  118.\n",
-      "  123.]\n"
+      "121.97560975609755\n",
+      "33.0\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.119,  0.317,  0.517,  0.718,  0.919,  1.122,  1.325,  1.529,\n",
-       "        1.734,  1.94 ,  2.146,  2.353,  2.56 ,  2.767,  2.975,  3.183,\n",
-       "        3.39 ,  3.598,  3.805,  4.012,  4.219,  4.426,  4.632,  4.837,\n",
-       "        5.042])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "temperatures = np.arange(36., 160, 5) - 33\n",
-    "print(temperatures)\n",
-    "\n",
-    "voltage_from_temperature(temperatures)"
+    "print(temperature_from_voltage(5.))\n",
+    "print(temperature_from_voltage(1.325))"
    ]
   },
   {
@@ -161,38 +225,35 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3.0256410256410255"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "155.58536585365854\n"
+     ]
     }
    ],
    "source": [
-    "temperature_from_voltage(0.12)"
+    "print(33.0 + 122.58536585365854)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "36.02564102564102"
+       "5.013"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "33 + 3.0256410256410255"
+    "voltage_from_temperature(155.) - voltage_from_temperature(33.)"
    ]
   },
   {
