- This is a multiline commit message - This is the second line   - Third line

--- a/morse/encode_morse.ipynb
+++ b/morse/encode_morse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
     "             '8' : '11100',\n",
     "             '9' : '11110',\n",
     "             '0' : '11111',\n",
-    "             ' ' : ' '}\n",
+    "             ' ' : '|'}\n",
     "\n",
     "def morse_lookup_table(dot  = '.', dash = '-'):\n",
     "    '''\n",
@@ -50,15 +50,16 @@
     "\n",
     "    new_morse_lookup = morse_dic.copy()\n",
     "\n",
-    "    for char, code in morse_dic.items():\n",
+    "    for char, code in new_morse_lookup.items():\n",
     "        new_code = ''\n",
     "        for dot_dash in code:\n",
-    "            if dot_dash == '0':\n",
+    "            if dot_dash == dot:\n",
     "                new_code += dot\n",
-    "            elif dot_dash == '1':\n",
+    "            elif dot_dash == dash:\n",
     "                new_code += dash\n",
     "            else:\n",
-    "                new_code = ' '\n",
+    "                new_code = '|'\n",
+    "            new_code += ' '\n",
     "        new_morse_lookup[char.upper()] = new_code\n",
     "    \n",
     "    return new_morse_lookup\n"
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,13 +76,41 @@
     "    '''\n",
     "    \n",
     "    morse_lookup = morse_lookup_table(dot = dit, dash = dah)\n",
-    "    \n",
+    "    print(morse_lookup)\n",
     "    morse = ''\n",
     "    \n",
     "    for char in text:\n",
     "        morse += morse_lookup[char.upper()]\n",
     "    \n",
     "    return morse\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A': '0 1 ', 'B': '1 0 0 0 ', 'C': '1 0 1 0 ', 'D': '1 0 0 ', 'E': '0 ', 'F': '0 0 1 0 ', 'G': '1 1 0 ', 'H': '0 0 0 0 ', 'I': '0 0 ', 'J': '0 1 1 1 ', 'K': '1 0 1 ', 'L': '0 1 0 0 ', 'M': '1 1 ', 'N': '1 0 ', 'O': '1 1 1 ', 'P': '1 0 0 1 ', 'Q': '1 1 0 1 ', 'R': '0 1 0 ', 'S': '0 0 0 ', 'T': '1 ', 'U': '0 0 1 ', 'V': '0 0 0 1 ', 'W': '0 1 1 ', 'X': '1 0 0 1 ', 'Y': '1 0 1 1 ', 'Z': '1 1 0 0 ', '1': '0 1 1 1 1 ', '2': '0 0 1 1 1 ', '3': '0 0 0 1 1 ', '4': '0 0 0 0 1 ', '5': '0 0 0 0 0 ', '6': '1 0 0 0 0 ', '7': '1 1 0 0 0 ', '8': '1 1 1 0 0 ', '9': '1 1 1 1 0 ', '0': '1 1 1 1 1 ', ' ': '| '}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'0 0 | 1 1 0 0 0 0 0 0 0 0 | 1 0 1 1 1 1 1 0 0 1 '"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = 'I miss you'\n",
+    "encode_morse(text, dit = '0', dah = '1')"
    ]
   },
   {
