--- a/string_to_float_in_list/string_to_float_in_list.ipynb
+++ b/string_to_float_in_list/string_to_float_in_list.ipynb
@@ -44,7 +44,7 @@
     "        try:\n",
     "            content[-1].append(float(item))\n",
     "        except ValueError:\n",
-    "            if content[-1] == []:\n",
+    "            if not content[-1]:\n",
     "                content.pop()\n",
     "                print('popping string')\n",
     "            break"
